Bug 469412 - Alt+Tab causes tabbox to remain visible on screen and eat keyboard events on Wayland
Summary: Alt+Tab causes tabbox to remain visible on screen and eat keyboard events on ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: 5.27.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-05-06 13:27 UTC by Nate Graham
Modified: 2023-05-06 14:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-05-06 13:27:15 UTC
STEPS TO REPRODUCE
1. Alt+Tab

OBSERVED RESULT
Tabbox remains on screen.

On Wayland, it additionally eats keyboard events, making the system unusable.

On X11, it does not eay keyboard events, so I am able to use a terminal to `killall kwin_x11` which makes it disappear and then I can continue using the system. Due to the severity of this issue, I am unable to use Plasma 6 on Wayland at the moment


EXPECTED RESULT
Tabbox disappears after Alt+Tab keys are released


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.0
Kernel Version: 6.2.14-300.fc38.x86_64 (64-bit)
Graphics Platform: X11 (also reproduces on Wayland)
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Comment 1 Bug Janitor Service 2023-05-06 14:28:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4064
Comment 2 Ismael Asensio 2023-05-06 14:43:39 UTC
Git commit e0ba7b4086cbaa82dc78fa5569d537447fdc6527 by Ismael Asensio.
Committed on 06/05/2023 at 14:29.
Pushed by iasensio into branch 'master'.

TabBox: Fix automatically hiding initialization

It was initialized to different values in the header and
in the constructor. Let's remove one of them to avoid
the confusion

AMENDS: 9d8d7e28a1047a6950392e481b6ad8dbbf1fb651
FIXED-IN: 6

M  +0    -1    src/tabbox/switcheritem.cpp

https://invent.kde.org/plasma/kwin/commit/e0ba7b4086cbaa82dc78fa5569d537447fdc6527