TabBox: Fix automatically hiding initialization

It was initialized to different values in the header and
in the constructor. Let's remove one of them to avoid
the confusion

AMENDS: 9d8d7e28a1047a6950392e481b6ad8dbbf1fb651
BUG: 469412
FIXED-IN: 6